force-app/main/default/objects/FlowPicklist__mdt/fields/OppGanadaSalientesBBDD__c.field-meta.xml
<CustomField>
    <fullName>OppGanadaSalientesBBDD__c</fullName>
    <description>Valores picklist para oportunidad ganada cuando el medio es BBDDy la llamada Salientes Básicos</description>
    <label>OppGanada/SalientesBBDD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por garantías del producto</fullName>
                <default>true</default>
                <label>Por garantías del producto</label>
            </value>
            <value>
                <fullName>Por precio</fullName>
            </value>
            <value>
                <fullName>Confianza en ECI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>