force-app/main/default/objects/FlowPicklist__mdt/fields/OppPerdidaEntrantesBlecis__c.field-meta.xml
<CustomField>
    <fullName>OppPerdidaEntrantesBlecis__c</fullName>
    <description>Valores picklist para oportunidad perdida cuando el medio es Teléfono O Manual y la llamada Entrantes Blecis</description>
    <label>OppPerdida/EntrantesBlecis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solo gratuito</fullName>
                <default>true</default>
                <label>Solo gratuito</label>
            </value>
            <value>
                <fullName>Mejores coberturas otras Cías</fullName>
            </value>
            <value>
                <fullName>No venta por precio</fullName>
            </value>
            <value>
                <fullName>Cobertura por seguro Hogar</fullName>
            </value>
            <value>
                <fullName>Es un regalo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>