force-app/main/default/objects/FlowPicklist__mdt/fields/OppPerdidaSalientesBasicos__c.field-meta.xml
<CustomField>
    <fullName>OppPerdidaSalientesBasicos__c</fullName>
    <description>Valores picklist para oportunidad perdida cuando el medio es Web, Adwords, Blog, Display, Email, RRSS, SMS o Corregistro y la llamada Salientes Básicos</description>
    <label>OppPerdida/SalientesBasicos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prima elevada</fullName>
                <default>true</default>
                <label>Prima elevada</label>
            </value>
            <value>
                <fullName>Contraoferta de su Cía</fullName>
            </value>
            <value>
                <fullName>Cobertura insuficiente</fullName>
            </value>
            <value>
                <fullName>No aceptación del riesgo</fullName>
            </value>
            <value>
                <fullName>Sin decisión / Sin respuesta</fullName>
            </value>
            <value>
                <fullName>Familiar</fullName>
            </value>
            <value>
                <fullName>Rechazado Cía</fullName>
            </value>
            <value>
                <fullName>No permite fraccionamiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>