force-app/main/default/objects/FlowPicklist__mdt/fields/OppPerdidaSalientesBBDD__c.field-meta.xml
<CustomField>
    <fullName>OppPerdidaSalientesBBDD__c</fullName>
    <description>Valores picklist para oportunidad perdida cuando el medio es BBDD y la llamada Salientes Básicos</description>
    <label>OppPerdida/SalientesBBDD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prima elevada</fullName>
                <default>true</default>
                <label>Prima elevada</label>
            </value>
            <value>
                <fullName>Contraoferta de su Cía</fullName>
            </value>
            <value>
                <fullName>Cobertura insuficiente</fullName>
            </value>
            <value>
                <fullName>No aceptación del riesgo</fullName>
            </value>
            <value>
                <fullName>Sin decisión / Sin respuesta</fullName>
            </value>
            <value>
                <fullName>Familiar</fullName>
            </value>
            <value>
                <fullName>Rechazado Cía</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>