force-app/main/default/objects/FlowPicklist__mdt/fields/OppPerdidaTelefonoEntrantesBasicos__c.field-meta.xml
<CustomField>
    <fullName>OppPerdidaTelefonoEntrantesBasicos__c</fullName>
    <description>Valores picklist para oportunidad ganada cuando el medio es Teléfono o Manual y la llamada Entrantes Básicos</description>
    <label>OppPerdida/EntrantesBasicos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prima Elevada</fullName>
                <default>true</default>
                <label>Prima Elevada</label>
            </value>
            <value>
                <fullName>Contraoferta de su cía</fullName>
            </value>
            <value>
                <fullName>Cobertura insuficiente</fullName>
            </value>
            <value>
                <fullName>No aceptación del riesgo</fullName>
            </value>
            <value>
                <fullName>Sin decisión / Sin respuesta</fullName>
            </value>
            <value>
                <fullName>Familiar</fullName>
            </value>
            <value>
                <fullName>Rechazado Cía</fullName>
            </value>
            <value>
                <fullName>No permite fraccionamiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>