force-app/main/default/objects/FlowPicklist__mdt/fields/OppPerdidPrestamos__c.field-meta.xml
<CustomField>
    <fullName>OppPerdidPrestamos__c</fullName>
    <description>Valores picklist para oportunidad perdida cuando el medio es Prestamos</description>
    <label>OppPerdida/Prestamos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No seguro Amortización</fullName>
                <default>true</default>
                <label>No seguro Amortización</label>
            </value>
            <value>
                <fullName>No validación cliente / KO</fullName>
            </value>
            <value>
                <fullName>Denegado</fullName>
            </value>
            <value>
                <fullName>Contratado en delegación</fullName>
            </value>
            <value>
                <fullName>No interesa al cliente</fullName>
            </value>
            <value>
                <fullName>Sin decisión / Sin respuesta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>