force-app/main/default/objects/FlowPicklist__mdt/fields/OppPlanificada_EntrantesBlecis__c.field-meta.xml
<CustomField>
    <fullName>OppPlanificada_EntrantesBlecis__c</fullName>
    <description>Valores picklist para oportunidad planificada cuando el medio es Teléfono O Manual y la llamada Entrantes Blecis</description>
    <label>OppPlanificada/EntrantesBlecis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No contactado</fullName>
                <default>true</default>
                <label>No contactado</label>
            </value>
            <value>
                <fullName>Faltan datos</fullName>
            </value>
            <value>
                <fullName>Pdte decisión</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>