force-app/main/default/objects/FlowPicklist__mdt/fields/OppPlanificadaEntrantesBasicos__c.field-meta.xml
<CustomField>
    <fullName>OppPlanificadaEntrantesBasicos__c</fullName>
    <description>Valores picklist para oportunidad ganada cuando el medio es Teléfono o Manual y la llamada Entrantes Básicos</description>
    <label>OppPlanificada/EntrantesBasicos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No contactado</fullName>
                <default>true</default>
                <label>No contactado</label>
            </value>
            <value>
                <fullName>Pdte decisión</fullName>
            </value>
            <value>
                <fullName>Faltan datos</fullName>
            </value>
            <value>
                <fullName>Vencimiento futuro</fullName>
            </value>
            <value>
                <fullName>Pdte documentación firmada</fullName>
            </value>
            <value>
                <fullName>Pdte aceptación Cïa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>