force-app/main/default/objects/FlowPicklist__mdt/fields/OppPlanificadaPrestamos__c.field-meta.xml
<CustomField>
    <fullName>OppPlanificadaPrestamos__c</fullName>
    <description>Valores picklist para oportunidad planificada cuando el medio es Prestamos</description>
    <label>OppPlanificada/Prestamos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No contactado</fullName>
                <default>true</default>
                <label>No contactado</label>
            </value>
            <value>
                <fullName>Envío documentación a FECI</fullName>
            </value>
            <value>
                <fullName>Pdte decisión</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>