force-app/main/default/objects/FlowPicklist__mdt/fields/OppPlanificadaSalientesBasicos__c.field-meta.xml
<CustomField>
    <fullName>OppPlanificadaSalientesBasicos__c</fullName>
    <description>Valores picklist para oportunidad aplazada cuando el medio es Web, Adwords, Blog, Display, Email, RRSS, SMS o Corregistro y la llamada Salientes Básicos</description>
    <label>OppPlanificada/SalientesBasicos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Contactado</fullName>
                <default>true</default>
                <label>No Contactado</label>
            </value>
            <value>
                <fullName>Pdte decisión</fullName>
            </value>
            <value>
                <fullName>Faltan datos</fullName>
            </value>
            <value>
                <fullName>Vencimiento Futuro</fullName>
            </value>
            <value>
                <fullName>Pdte documentación firmada</fullName>
            </value>
            <value>
                <fullName>Pdte aceptación Cïa</fullName>
            </value>
            <value>
                <fullName>Pdte aceptación Cía</fullName>
                <isActive>false</isActive>
                <label>Pdte aceptación Cía</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>