force-app/main/default/objects/FlowPicklist__mdt/fields/OppPlanificadaSalientesBBDD__c.field-meta.xml
<CustomField>
    <fullName>OppPlanificadaSalientesBBDD__c</fullName>
    <description>Valores picklist para oportunidad planificada cuando el medio es BBDD y la llamada Salientes Básicos</description>
    <label>OppPlanificada/SalientesBBDD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No contactado</fullName>
                <default>true</default>
                <label>No contactado</label>
            </value>
            <value>
                <fullName>Pdte decisión</fullName>
            </value>
            <value>
                <fullName>Faltan datos</fullName>
            </value>
            <value>
                <fullName>Vencimiento Futuro</fullName>
            </value>
            <value>
                <fullName>Pdte documentación firmada</fullName>
            </value>
            <value>
                <fullName>Pdte aceptación Cïa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>