force-app/main/default/objects/FlowPicklist__mdt/fields/RamosAceleradorOfrecido__c.field-meta.xml
<CustomField>
    <fullName>RamosAceleradorOfrecido__c</fullName>
    <description>Picklist acotada de Ramos para Acelerador ofrecido, es usada en Flows donde se den por Ganadas Oportunidades de Básicos</description>
    <label>RamosAceleradorOfrecido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autos/Motos</fullName>
                <default>true</default>
                <label>Autos/Motos</label>
            </value>
            <value>
                <fullName>Hogar</fullName>
            </value>
            <value>
                <fullName>Vida</fullName>
            </value>
            <value>
                <fullName>Accidentes</fullName>
            </value>
            <value>
                <fullName>Decesos</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>