force-app/main/default/objects/FlowPicklist__mdt/fields/TelefonoNoCualificado__c.field-meta.xml
<CustomField>
    <fullName>TelefonoNoCualificado__c</fullName>
    <description>Valores &apos;No Cualificado&apos; del picklist de result__c de campaign member</description>
    <label>Telefono/NoCualificado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulta NO venta - ATC</fullName>
                <default>true</default>
                <label>Consulta NO venta - ATC</label>
            </value>
            <value>
                <fullName>Gestión de Cartera</fullName>
            </value>
            <value>
                <fullName>No coinciden datos verificacion</fullName>
            </value>
            <value>
                <fullName>No dispone datos TECI</fullName>
            </value>
            <value>
                <fullName>No coinciden condiciones de la oferta</fullName>
            </value>
            <value>
                <fullName>Oferta fuera de fecha</fullName>
            </value>
            <value>
                <fullName>Llamada cortada</fullName>
            </value>
            <value>
                <fullName>Asegurado en MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>